- added frontend portfolio images

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -42,60 +42,62 @@
         <div class="portfolio__wrapper tab-content">
             <article class="portfolio__content--frontend tab-pane active" id="home" role="tabpanel">
                 <div class="portfolio__list">
-                    <p class="portfolio__content__title">Last 10 projects I worked on:</p>
+                    <p class="portfolio__content__title">Recent projects I worked on:</p>
                     <button class="portfolio__list__project">
-                        <img class="portfolio__list__project-img" src="img/portfolio/foodora-thumb.jpg">
-                        <span class="portfolio__list__project-name">Foodora</span>
-                        <span class="portfolio__list__project-type">e-commerce</span>
-                    </button>
-                    <button class="portfolio__list__project">
-                        <img class="portfolio__list__project-img" src="img/portfolio/foodora-thumb.jpg">
-                        <span class="portfolio__list__project-name">Burger King Delivery</span>
-                        <span class="portfolio__list__project-type">e-commerce</span>
+                        <img class="portfolio__list__project-img" src="img/portfolio/bk-thumb.png">
+                        <span class="portfolio__list__project-type">E-commerce</span>
                     </button>
                     <button class="portfolio__list__project">
-                        <img class="portfolio__list__project-img" src="img/portfolio/foodora-thumb.jpg">
-                        <span class="portfolio__list__project-name">Vendomo</span>
-                        <span class="portfolio__list__project-type">website</span>
+                        <img class="portfolio__list__project-img" src="img/portfolio/foodora-thumb.png">
+                        <span class="portfolio__list__project-type">E-commerce</span>
                     </button>
                     <button class="portfolio__list__project">
-                        <img class="portfolio__list__project-img" src="img/portfolio/foodora-thumb.jpg">
-                        <span class="portfolio__list__project-name">UN SGCT Lab</span>
-                        <span class="portfolio__list__project-type">website</span>
+                        <img class="portfolio__list__project-img" src="img/portfolio/vendomo-thumb.png">
+                        <span class="portfolio__list__project-type">Website</span>
                     </button>
                     <button class="portfolio__list__project">
-                        <img class="portfolio__list__project-img" src="img/portfolio/foodora-thumb.jpg">
-                        <span class="portfolio__list__project-name">UN IPO Programme</span>
-                        <span class="portfolio__list__project-type">website</span>
+                        <img class="portfolio__list__project-img" src="img/portfolio/timvision-thumb.png">
+                        <span class="portfolio__list__project-type">Web app</span>
                     </button>
                     <button class="portfolio__list__project">
-                        <img class="portfolio__list__project-img" src="img/portfolio/foodora-thumb.jpg">
-                        <span class="portfolio__list__project-name">UN CBRN KMS</span>
-                        <span class="portfolio__list__project-type">e-learning</span>
+                        <img class="portfolio__list__project-img" src="img/portfolio/cubomusica-thumb.png">
+                        <span class="portfolio__list__project-type">Web app</span>
                     </button>
                     <button class="portfolio__list__project">
-                        <img class="portfolio__list__project-img" src="img/portfolio/foodora-thumb.jpg">
-                        <span class="portfolio__list__project-name">Vaso di Pandora</span>
-                        <span class="portfolio__list__project-type">e-commerce</span>
+                        <img class="portfolio__list__project-img--with-name" src="img/portfolio/unicri-thumb.png">
+                        <span class="portfolio__list__project-name">Counter-Terrorism Lab</span>
+                        <span class="portfolio__list__project-type">Website</span>
                     </button>
                     <button class="portfolio__list__project">
-                        <img class="portfolio__list__project-img" src="img/portfolio/foodora-thumb.jpg">
-                        <span class="portfolio__list__project-name">Bagno milena</span>
-                        <span class="portfolio__list__project-type">website</span>
+                        <img class="portfolio__list__project-img--with-name" src="img/portfolio/unicri-thumb.png">
+                        <span class="portfolio__list__project-name">CBRN KMS</span>
+                        <span class="portfolio__list__project-type">E-learning portal</span>
                     </button>
-                    <button class="portfolio__list__project m-b-0">
-                        <img class="portfolio__list__project-img" src="img/portfolio/foodora-thumb.jpg">
-                        <span class="portfolio__list__project-name">Russian School</span>
-                        <span class="portfolio__list__project-type">website</span>
+                    <button class="portfolio__list__project">
+                        <img class="portfolio__list__project-img--with-name" src="img/portfolio/unicri-thumb.png">
+                        <span class="portfolio__list__project-name">EU-SEC II Project</span>
+                        <span class="portfolio__list__project-type">E-learning portal</span>
                     </button>
-                    <button class="portfolio__list__project m-b-0">
-                        <img class="portfolio__list__project-img" src="img/portfolio/foodora-thumb.jpg">
-                        <span class="portfolio__list__project-name">Russian School</span>
-                        <span class="portfolio__list__project-type">website</span>
+                    <button class="portfolio__list__project">
+                        <img class="portfolio__list__project-img--with-name" src="img/portfolio/unicri-thumb.png">
+                        <span class="portfolio__list__project-name">IPO Programme</span>
+                        <span class="portfolio__list__project-type">Website</span>
                     </button>
-                    <br class="portfolio__content__title">
-                        I also worked on other 25+ websites, but those were scary times when IE5 was still around :)<br/>
-                        If you are curious, though, drop me a line, I'll send you some screen-shots.
+                    <button class="portfolio__list__project">
+                        <img class="portfolio__list__project-img" src="img/portfolio/milena-thumb.png">
+                        <span class="portfolio__list__project-type">Website</span>
+                    </button>
+                    <button class="portfolio__list__project">
+                        <img class="portfolio__list__project-img" src="img/portfolio/davide-thumb.png">
+                        <span class="portfolio__list__project-type">Website</span>
+                    </button>
+                    <button class="portfolio__list__project">
+                        <img class="portfolio__list__project-img" src="img/portfolio/pandora-thumb.png">
+                        <span class="portfolio__list__project-type">E-commerce</span>
+                    </button>
+                    <p class="portfolio__content__title">
+                        I also worked on other 25+ websites, but those were old times (IE5 was still around).<br/>
+                        If you are curious, though, ask me some other screen-shots.
                     </p>
                 </div>
                 <header class="portfolio__header">
