--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -22,119 +22,101 @@
             </button>
         </nav>
 
-        <!-- Nav tabs -->
-
-        <nav class="portfolio__nav">
-            <ul class="portfolio__nav-wrapper nav nav-tabs" role="tablist">
-                <li class="nav-item">
-                    <a class="portfolio__nav__button nav-link active" data-toggle="tab" href="#home" role="tab">Front-end portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="portfolio__nav__button nav-link" data-toggle="tab" href="#profile" role="tab">Design portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="portfolio__nav__button nav-link" data-toggle="tab" href="#this-site" role="tab">About this site</a>
-                </li>
-            </ul>
-        </nav>
-
         <!-- Tab panes -->
-        <div class="portfolio__wrapper tab-content">
-            <article class="portfolio__content--frontend tab-pane active" id="home" role="tabpanel">
-                <div class="portfolio__list">
-                    <p class="portfolio__content__title">Recent projects I worked on:</p>
-                    <button class="portfolio__list__project">
-                        <img class="portfolio__list__project-img" src="img/portfolio/bk-thumb.png">
-                        <span class="portfolio__list__project-type">E-commerce</span>
-                    </button>
-                    <button class="portfolio__list__project">
-                        <img class="portfolio__list__project-img" src="img/portfolio/foodora-thumb.png">
-                        <span class="portfolio__list__project-type">E-commerce</span>
-                    </button>
-                    <button class="portfolio__list__project">
-                        <img class="portfolio__list__project-img" src="img/portfolio/vendomo-thumb.png">
-                        <span class="portfolio__list__project-type">Website</span>
-                    </button>
-                    <button class="portfolio__list__project">
-                        <img class="portfolio__list__project-img" src="img/portfolio/timvision-thumb.png">
-                        <span class="portfolio__list__project-type">Web app</span>
-                    </button>
-                    <button class="portfolio__list__project">
-                        <img class="portfolio__list__project-img" src="img/portfolio/cubomusica-thumb.png">
-                        <span class="portfolio__list__project-type">Web app</span>
-                    </button>
-                    <button class="portfolio__list__project">
-                        <img class="portfolio__list__project-img--with-name" src="img/portfolio/unicri-thumb.png">
-                        <span class="portfolio__list__project-name">Counter-Terrorism Lab</span>
-                        <span class="portfolio__list__project-type">Website</span>
-                    </button>
-                    <button class="portfolio__list__project">
-                        <img class="portfolio__list__project-img--with-name" src="img/portfolio/unicri-thumb.png">
-                        <span class="portfolio__list__project-name">CBRN KMS</span>
-                        <span class="portfolio__list__project-type">E-learning portal</span>
-                    </button>
-                    <button class="portfolio__list__project">
-                        <img class="portfolio__list__project-img--with-name" src="img/portfolio/unicri-thumb.png">
-                        <span class="portfolio__list__project-name">EU-SEC II Project</span>
-                        <span class="portfolio__list__project-type">E-learning portal</span>
-                    </button>
-                    <button class="portfolio__list__project">
-                        <img class="portfolio__list__project-img--with-name" src="img/portfolio/unicri-thumb.png">
-                        <span class="portfolio__list__project-name">IPO Programme</span>
-                        <span class="portfolio__list__project-type">Website</span>
-                    </button>
-                    <button class="portfolio__list__project">
-                        <img class="portfolio__list__project-img" src="img/portfolio/milena-thumb.png">
-                        <span class="portfolio__list__project-type">Website</span>
-                    </button>
-                    <button class="portfolio__list__project">
-                        <img class="portfolio__list__project-img" src="img/portfolio/davide-thumb.png">
-                        <span class="portfolio__list__project-type">Website</span>
-                    </button>
-                    <button class="portfolio__list__project">
-                        <img class="portfolio__list__project-img" src="img/portfolio/pandora-thumb.png">
-                        <span class="portfolio__list__project-type">E-commerce</span>
-                    </button>
-                    <p class="portfolio__content__title">
-                        I also worked on other 25+ websites, but those were old times (IE5 was still around).<br/>
-                        If you are curious, though, ask me some other screen-shots.
-                    </p>
-                </div>
-                <header class="portfolio__header">
-                    <h4 class="portfolio__header__name">Pavel Maximov</h4>
-                    <h1 class="portfolio__header__title">Front-end Portfolio</h1>
-                    <figure class="portfolio__header__img-wrapper">
-                        <img class="portfolio__header__img--frontend" src="img/portfolio.png">
-                    </figure>
-                </header>
-            </article>
+        <article class="portfolio__content">
+            <div class="portfolio__list">
+                <p class="portfolio__content__title">Recent projects I worked on:</p>
+                <button class="portfolio__list__project">
+                    <img class="portfolio__list__project-img portfolio__list__project-img--bk" src="img/portfolio/bk-thumb.png">
+                    <span class="portfolio__list__project-type">
+                        <img src="img/icons/eye-outline.svg">
+                        food delivery<br/>e-commerce
+                    </span>
+                </button>
+                <button class="portfolio__list__project">
+                    <img class="portfolio__list__project-img portfolio__list__project-img--foodora" src="img/portfolio/foodora-thumb.png">
+                    <span class="portfolio__list__project-type">
+                        <img src="img/icons/eye-outline.svg">
+                        food delivery<br/>e-commerce</span>
+                </button>
+                <button class="portfolio__list__project">
+                    <img class="portfolio__list__project-img portfolio__list__project-img--vendomo" src="img/portfolio/vendomo-thumb.png">
+                    <span class="portfolio__list__project-type">
+                        <img src="img/icons/eye-outline.svg">
+                        real estate<br/>website</span>
+                </button>
+                <button class="portfolio__list__project">
+                    <img class="portfolio__list__project-img portfolio__list__project-img--timvision" src="img/portfolio/timvision-thumb.png">
+                    <span class="portfolio__list__project-type">
+                        <img src="img/icons/eye-outline.svg">
+                        movies streaming<br/>web app</span>
+                </button>
+                <button class="portfolio__list__project">
+                    <img class="portfolio__list__project-img portfolio__list__project-img--cubomusica" src="img/portfolio/cubomusica-thumb.png">
+                    <span class="portfolio__list__project-type">
+                        <img src="img/icons/eye-outline.svg">
+                        music streaming<br/>web app</span>
+                </button>
+                <button class="portfolio__list__project">
+                    <img class="portfolio__list__project-img portfolio__list__project-img--cbrn" src="img/portfolio/cbrn-thumb.png">
+                    <span class="portfolio__list__project-type">
+                        <img src="img/icons/eye-outline.svg">
+                        terrorism prevention<br/>e-learning</span>
+                </button>
+                <button class="portfolio__list__project">
+                    <img class="portfolio__list__project-img portfolio__list__project-img--lab" src="img/portfolio/lab-thumb.png">
+                    <span class="portfolio__list__project-type">
+                        <img src="img/icons/eye-outline.svg">
+                        terrorism prevention<br/>website</span>
+                </button>
+                <button class="portfolio__list__project">
+                    <img class="portfolio__list__project-img portfolio__list__project-img--ipo" src="img/portfolio/ipo-thumb.png">
+                    <span class="portfolio__list__project-type">
+                        <img src="img/icons/eye-outline.svg">
+                        major events security<br/>website</span>
+                </button>
+                <button class="portfolio__list__project">
+                    <img class="portfolio__list__project-img portfolio__list__project-img--eusec" src="img/portfolio/eusec-thumb.png">
+                    <span class="portfolio__list__project-type">
+                        <img src="img/icons/eye-outline.svg">
+                        major events security<br/>e-learning</span>
+                </button>
+                <button class="portfolio__list__project">
+                    <img class="portfolio__list__project-img portfolio__list__project-img--milena" src="img/portfolio/milena-thumb.png">
+                    <span class="portfolio__list__project-type">
+                        <img src="img/icons/eye-outline.svg">
+                        beach facility<br/>website</span>
+                </button>
+                <button class="portfolio__list__project">
+                    <img class="portfolio__list__project-img portfolio__list__project-img--davide" src="img/portfolio/davide-thumb.png">
+                    <span class="portfolio__list__project-type">
+                        <img src="img/icons/eye-outline.svg">
+                        internet family filter<br/>website</span>
+                </button>
+                <button class="portfolio__list__project">
+                    <img class="portfolio__list__project-img portfolio__list__project-img--pandora" src="img/portfolio/pandora-thumb.png">
+                    <span class="portfolio__list__project-type">
+                        <img src="img/icons/eye-outline.svg">
+                            concept store<br/>e-commerce</span>
+                </button>
 
-            <article class="portfolio__content--design tab-pane" id="profile" role="tabpanel">
-                <div class="portfolio__projects">
-                    But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it?
+                <p class="portfolio__content__footer">
+                    <span class="portfolio__content__title-line">I also created other 25+ websites in the old times (when IE5 and Flash were cool).</span>
+                    <span class="portfolio__content__title-line">They look vintage now, but if you are 2000-nostalgic, check out some of my</span>
+                    <button class="portfolio__old-projects-button" href="#">Older projects</button>
+                </p>
+            </div>
+            <header class="portfolio__header">
+                <div class="portfolio__header__title-wrapper">
+                    <h4 class="portfolio__header__subtitle">Pavel Maximov</h4>
+                    <h4 class="portfolio__header__subtitle">Front-end Developer</h4>
+                    <h1 class="portfolio__header__title">Portfolio</h1>
                 </div>
-                <header class="portfolio__header">
-                    <h4 class="portfolio__header__name">Pavel Maximov</h4>
-                    <h1 class="portfolio__header__title">Front-end Portfolio</h1>
-                    <figure class="portfolio__header__img-wrapper">
-                        <img class="portfolio__header__img--design" src="img/portfolio-design.png">
-                    </figure>
-                </header>
-            </article>
-
-            <article class="portfolio__content--this-site tab-pane" id="this-site" role="tabpanel">
-                <div class="portfolio__projects">
-                    But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who?
-                </div>
-                <header class="portfolio__header">
-                    <h4 class="portfolio__header__name">Pavel Maximov</h4>
-                    <h1 class="portfolio__header__title">About this site</h1>
-                    <figure class="portfolio__header__img-wrapper">
-                        <img class="portfolio__header__img--design" src="img/home-head.png">
-                    </figure>
-                </header>
-            </article>
-        </div>
+                <figure class="portfolio__header__img-wrapper">
+                    <img class="portfolio__header__img" src="img/portfolio.png">
+                </figure>
+            </header>
+        </article>
 
         <footer class="footer">
             <h3 class="footer__title">Hire me!</h3>
