--- a/public/index.html
+++ b/public/index.html
@@ -11,62 +11,115 @@
 
 
 <main class="main-container" id="main" data-offcanvas="content">
-    <section class="home">
-        <nav class="nav-top" data-offcanvas="content">
-            <h5 class="nav-top__title">Pavel Maximov</h5>
-            <h5 class="nav-top__title">Front-end Developer</h5>
-            <button class="nav-top__menu-button" type="button" data-toggle="offcanvas">
-                <svg class="nav-top__icon-menu" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="50" height="50"><title>icon-menu</title><path class="nav-top__icon-menu__fill" d="M16.07,16.25l0.07,0S16.13,16.26,16.07,16.25Z"/><path class="nav-top__icon-menu__fill" d="M34.13,16.23h0Z"/><path class="nav-top__icon-menu__fill" d="M18.85,17.82h0Z"/><path class="nav-top__icon-menu__fill" d="M15.21,17.69c3.63,0.21,6.77-.23,9.71-0.28s11.43,1.84,14.8-.09c0.67-.38-6.71-1.05-7.09-1a41.75,41.75,0,0,1-4.74-.37c-1.35-1-8.13.12-10.79,0.53,0-.05-4.38-0.74-5,0.9-0.37.95,3.1,0.35,3.14,0.35C16.16,17.75,14.12,17.78,15.21,17.69Z"/><path class="nav-top__icon-menu__fill" d="M35.93,25.58l-0.07,0S35.87,25.58,35.93,25.58Z"/><path class="nav-top__icon-menu__fill" d="M17.87,25.6h0Z"/><path class="nav-top__icon-menu__fill" d="M33.15,24h0Z"/><path class="nav-top__icon-menu__fill" d="M36.79,24.14c-3.63-.21-6.77.23-9.71,0.28s-11.43-1.84-14.8.09c-0.67.38,6.71,1.05,7.09,1a41.75,41.75,0,0,1,4.74.37c1.35,1,8.13-.12,10.79-0.53,0,0.05,4.38.74,5-.9,0.37-.95-3.1-0.35-3.14-0.35C35.84,24.08,37.88,24.05,36.79,24.14Z"/><path class="nav-top__icon-menu__fill" d="M16.07,32.59l0.07,0S16.13,32.59,16.07,32.59Z"/><path class="nav-top__icon-menu__fill" d="M34.13,32.57h0Z"/><path class="nav-top__icon-menu__fill" d="M18.85,34.15h0Z"/><path class="nav-top__icon-menu__fill" d="M15.21,34c3.63,0.21,6.77-.23,9.71-0.28s11.43,1.84,14.8-.09c0.67-.38-6.71-1.05-7.09-1a41.75,41.75,0,0,1-4.74-.37c-1.35-1-8.13.12-10.79,0.53,0-.05-4.38-0.74-5,0.9-0.37.95,3.1,0.35,3.14,0.35C16.16,34.08,14.12,34.11,15.21,34Z"/></svg>
-                <svg class="nav-top__icon-x" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="50" height="50"><title>icon-x</title><path class="nav-top__icon-x__fill" d="M17.43,31.13l0.08,0S17.47,31.1,17.43,31.13Z"/><path class="nav-top__icon-x__fill" d="M30.18,18.35v0A0,0,0,0,0,30.18,18.35Z"/><path class="nav-top__icon-x__fill" d="M20.5,30.28h0Z"/><path class="nav-top__icon-x__fill" d="M17.84,32.76c2.72-2.42,4.63-4.95,6.67-7.07s9.38-6.78,10.4-10.53c0.2-.74-5.49,4-5.75,4.27a41.75,41.75,0,0,1-3.62,3.09c-1.64.27-5.67,5.83-7.25,8-0.06,0-3.62,2.58-2.92,4.19,0.41,0.93,2.44-1.94,2.47-2C18.55,32.13,17.13,33.59,17.84,32.76Z"/><path class="nav-top__icon-x__fill" d="M31.13,32.57l0-.08S31.1,32.53,31.13,32.57Z"/><path class="nav-top__icon-x__fill" d="M18.35,19.82h0Z"/><path class="nav-top__icon-x__fill" d="M30.28,29.5h0Z"/><path class="nav-top__icon-x__fill" d="M32.76,32.16c-2.42-2.72-4.95-4.63-7.07-6.67s-6.78-9.38-10.53-10.4c-0.74-.2,4,5.49,4.27,5.75a41.75,41.75,0,0,1,3.09,3.62c0.27,1.64,5.83,5.67,8,7.25,0,0.06,2.58,3.62,4.19,2.92,0.93-.41-1.94-2.44-2-2.47C32.13,31.45,33.59,32.87,32.76,32.16Z"/></svg>
-            </button>
-        </nav>
-        <article class="home-wrapper">
-            <header class="home__header">
-                <h2 class="home__title-name">Pavel Maximov</h2>
-                <h1 class="home__title-role">Front-end developer</h1>
-                <p><svg class="home__icon-pin" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 20" width="15" height="20"><title>icon-pin</title><path class="home__icon-pin__fill" d="M4.12 1.8h.13s-.05-.04-.13 0zM4.82 17zM8.55 2.54z"/><path class="home__icon-pin__fill" d="M3.82 3.78a5.84 5.84 0 0 1 6.35-.67A5.85 5.85 0 0 1 13 8.65s-.32.62.11.43a34.46 34.46 0 0 1-4.35 7.73C8.4 17.35 8 18.29 7.22 18a4 4 0 0 1-1.27-1.47c-.46-.63-4.89-8.37-4.29-8.65-1.59.79-.09 3.77.41 4.81A39.38 39.38 0 0 0 6 18.37c-.34-.49.55.56.68.69s1 1 1.1.26a1.21 1.21 0 0 0 .05.35c.89-1.21 2.19-2.05 3-3.32C11 16 11.88 14 12.36 14a.78.78 0 0 0 0 .33 3.37 3.37 0 0 0 .54-1.13q0 .19-.17.12c.12-.17.91-1.45.64-1.37.44-.12.87-1.79.95-2.19a2.63 2.63 0 0 0-.05-.95c0-.1-.13-1.29.2-.8-.47-1.11-.23-2.37-.72-3.51a4.8 4.8 0 0 0-1.85-2.22 12.45 12.45 0 0 0-2.2-1.15C9.39 1 8.28.58 8.43 1c-.77-.49-1.84 0-2.59.25A.19.19 0 0 1 6 1.07a1.31 1.31 0 0 0-.37.06A1 1 0 0 0 6 1C5.12.92 2.55 2.37 2.52 3.37c-.06-.37.11-.37-.06-.11a5 5 0 0 0-.26.53 10.43 10.43 0 0 0-.54 1.55c-.12.49-.66 2.37.18 2.59.64.17 1.6-3.69 2.16-4.28 0 0-.32.3-.17.13 2.17-1.94-.27.28-.01 0zM9.47 10.42h-.06.06zM8.36 4.73zM7.61 9.57z"/><path class="home__icon-pin__fill" d="M8.87 9.05a2 2 0 0 1-2.37.22c-.2-.12-1.19-.84-1-.94s.07 0 0 .06c-.28.09.41-1.58.62-1.8a2 2 0 0 1 1.7-.67c.92.15 1.5 2 2.13 1.9s.57-1.14.43-1.51A2.78 2.78 0 0 0 9.15 5a2.63 2.63 0 0 0-1.28-.42 6.7 6.7 0 0 1-1 .5C7 4.69 5.81 5 5.69 5.11a2.69 2.69 0 0 0-1.07 1.12 1.37 1.37 0 0 0-.35 1 8.75 8.75 0 0 0-.08 1.12q-.33.4.06.52l.36.23c-.57.43 1 1.82 1.52 2a5.84 5.84 0 0 0 1.64.13c.12 0 1.21-.61 1.08-.4q-.15.06.06-.05c0 .27 0 .12.3-.07 0 0 .34-.42.32-.39a2.1 2.1 0 0 0 .47-.66c.2.23.18-.14.21-.47a1 1 0 0 0-.17-1c-.64-.7-.85.31-1.12.84-.11.1.1-.19 0 0-.63.54.08-.18-.05.02z"/></svg>
-                    London based contractor</p>
-            </header>
-            <figure class="home__head-img">
-                <img class="home__head-img__img" src="/img/home-head.png">
-            </figure>
-            <figure class="home__hire-me">
-                <figcaption class="home__hire-me__text">
-                    <button class="home__hire-me__button">Hire me!</button>
-                    Next availability for contract
-                    <span class="home__hire-me__text__date">April 2016</span>
-                </figcaption>
-            </figure>
-        </article>
-        <footer class="footer">
-            <h3 class="footer__title">Hire me!</h3>
-            <p class="footer__subtitle">Next availability for contract:
-                <span class="footer__date">April 2016</span></p>
-            <nav class="footer__nav">
-                <button class="footer__nav__button" onClick="location.href='portfolio.html'">Portfolio</button>
-                <button class="footer__nav__button" onClick="location.href='skills.html'">Skills</button>
-                <button class="footer__nav__button" onClick="location.href='experience.html'">Experience</button>
-                <button class="footer__nav__button" onClick="location.href='contact.html'">Contact</button>
-                <button class="footer__nav__button" onclick="window.open('resume-pavel-maximov.pdf', '_blank')">Resume</button>
-                <button class="footer__nav__button" onclick="window.open('https://github.com/pavelmaximov', '_blank')">Code</button>
+    <article id="intro">
+        <header class="article-header">
+            <div class="article-title-wrapper">
+                <figure class="article-title-img-wrapper">
+                    <img class="article-title-img" src="/img/head.png">
+                </figure>
+                <h1>Pavel Maximov</h1>
+                <h1>Front-end Developer</h1>
+                <h2>London, UK</h2>
+            </div>
+            <nav class="article-nav">
+                <button class="article-header__nav__button" onClick="scrollToElement('#skills')">Skills</button>
+                <button class="article-header__nav__button" onClick="scrollToElement('#portfolio')">Portfolio</button>
+                <button class="article-header__nav__button" onClick="scrollToElement('#experience')">Experience</button>
+                <button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact</button>
             </nav>
-        </footer>
-    </section>
-    <aside class="side-bar" id="sidebar">
-        <nav class="side-bar__nav">
-            <button class="side-bar__nav__button--portfolio" onClick="location.href='portfolio.html'">Portfolio</button>
-            <button class="side-bar__nav__button--skills" onClick="location.href='skills.html'">Skills</button>
-            <button class="side-bar__nav__button--experience" onClick="location.href='experience.html'">Experience</button>
-            <button class="side-bar__nav__button--contact" onClick="location.href='contact.html'">Contact</button>
-            <button class="side-bar__nav__button--resume" onclick="window.open('resume-pavel-maximov.pdf', '_blank')">Resume</button>
-            <button class="side-bar__nav__button--code" onclick="window.open('https://github.com/pavelmaximov', '_blank')">Code</button>
-        </nav>
-    </aside>
+        </header>
+        <div class="article-body">
+            <video id="intro-video" height="100%" width="100%" autoplay loop>
+                <source src="/video/intro.mp4" type="video/mp4">
+            </video>
+        </div>
+    </article>
+
+    <article id="skills">
+        <header class="article-header">
+            <div class="article-title-wrapper">
+                <figure class="article-title-img-wrapper">
+                    <img class="article-title-img" src="/img/skills.png">
+                </figure>
+                <h1>Skills</h1>
+            </div>
+            <nav class="article-nav">
+                <button class="article-header__nav__button" onClick="scrollToElement('#skills')">Skills</button>
+                <button class="article-header__nav__button" onClick="scrollToElement('#portfolio')">Portfolio</button>
+                <button class="article-header__nav__button" onClick="scrollToElement('#experience')">Experience</button>
+                <button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact</button>
+            </nav>
+        </header>
+        <div class="article-body">
+            Skills list
+        </div>
+    </article>
+
+    <article id="portfolio">
+        <header class="article-header">
+            <div class="article-title-wrapper">
+                <figure class="article-title-img-wrapper">
+                    <img class="article-title-img" src="/img/portfolio.png">
+                </figure>
+                <h1>portfolio</h1>
+            </div>
+            <nav class="article-nav">
+                <button class="article-header__nav__button" onClick="scrollToElement('#skills')">Skills</button>
+                <button class="article-header__nav__button" onClick="scrollToElement('#portfolio')">Portfolio</button>
+                <button class="article-header__nav__button" onClick="scrollToElement('#experience')">Experience</button>
+                <button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact</button>
+            </nav>
+        </header>
+        <div class="article-body">
+            Portfolio items
+        </div>
+    </article>
+
+    <article class="experience" id="experience">
+        <header class="article-header">
+            <div class="article-title-wrapper">
+                <figure class="article-title-img-wrapper">
+                    <img class="article-title-img" src="/img/experience.png">
+                </figure>
+                <h1>Experience</h1>
+            </div>
+            <nav class="article-nav">
+                <button class="article-header__nav__button" onClick="scrollToElement('#skills')">Skills</button>
+                <button class="article-header__nav__button" onClick="scrollToElement('#portfolio')">Portfolio</button>
+                <button class="article-header__nav__button" onClick="scrollToElement('#experience')">Experience</button>
+                <button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact</button>
+            </nav>
+        </header>
+        <div class="article-body">
+            Experience timeline
+        </div>
+    </article>
+
+    <article class="contact" id="contact">
+        <header class="article-header">
+            <div class="article-title-wrapper">
+                <figure class="article-title-img-wrapper">
+                    <img class="article-title-img" src="/img/contact.png">
+                </figure>
+                <h1>Contact</h1>
+            </div>
+            <nav class="article-nav">
+                <button class="article-header__nav__button" onClick="scrollToElement('#skills')">Skills</button>
+                <button class="article-header__nav__button" onClick="scrollToElement('#portfolio')">Portfolio</button>
+                <button class="article-header__nav__button" onClick="scrollToElement('#experience')">Experience</button>
+                <button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact</button>
+            </nav>
+        </header>
+        <div class="article-body">
+            Contact info
+        </div>
+    </article>
+
 </main>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js"></script>-->
+<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>-->
 <script src="/js/back.js" ></script>
 
 </body>
