--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 
 
 <main class="main-container" id="main" data-offcanvas="content">
+
     <article id="intro">
         <header class="article-header">
             <div class="article-title-wrapper">
@@ -32,6 +33,11 @@
             <video id="intro-video" height="100%" width="100%" autoplay loop>
                 <source src="/video/intro.mp4" type="video/mp4">
             </video>
+            <div id="intro-video-overlay">
+                &#x3C;article id=&#x22;intro&#x22;&#x3E;<br/>
+                &#x3C;header class=&#x22;article-header&#x22;&#x3E;<br/>
+                &#x3C;div class=&#x22;article-title-wrapper&#x22;&#x3E;<br/>
+            </div>
         </div>
     </article>
 
