- creating javascript for typing

--- a/public/index.html
+++ b/public/index.html
@@ -33,11 +33,7 @@
             <video id="intro-video" height="100%" width="100%" autoplay loop>
                 <source src="/video/intro.mp4" type="video/mp4">
             </video>
-            <div id="intro-video-overlay">
-                &#x3C;article id=&#x22;intro&#x22;&#x3E;<br/>
-                &#x3C;header class=&#x22;article-header&#x22;&#x3E;<br/>
-                &#x3C;div class=&#x22;article-title-wrapper&#x22;&#x3E;<br/>
-            </div>
+            <div id="intro-code"></div>
         </div>
     </article>
 
