- implemented Skills section

--- a/public/index.html
+++ b/public/index.html
@@ -29,12 +29,9 @@
                 <button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact</button>
             </nav>
         </header>
-        <div class="article-body">
             <video id="intro-video" height="100%" width="100%" autoplay loop>
-                <source src="/video/intro.mp4" type="video/mp4">
+                <source src="/video/introA.mp4"  type="video/mp4">
             </video>
-            <div id="intro-code"></div>
-        </div>
     </article>
 
     <article id="skills">
@@ -53,7 +50,16 @@
             </nav>
         </header>
         <div class="article-body">
-            Skills list
+            <figure>
+                <img id="skills-list-img" src="img/skills-list.png">
+            </figure>
+            <p>JavaScript ES6 <span>/</span> Backbone.js <span>/</span> AngularJS <span>/</span> React <span>/</span> jQuery <span>/</span> TDD</p>
+            <p>CSS3 <span>/</span> SASS <span>/</span> LESS <span>/</span> Bootrsap <span>/</span> Responsive <span>/</span> Cross-browser</p>
+            <p>HTML5 <span>/</span> Twig <span>/</span> Accessibility <span>/</span> SEO</p>
+            <p>Automation <span>/</span> Gulp <span>/</span> Grunt </p>
+            <p>UX/UI Design <span>/</span> Photoshop <span>/</span> Illustrator <span>/</span> Usability</p>
+            <p>Wordpress <span>/</span> PHP <span>(basics)</span> <span>/</span>  MySQL <span>(basics)</span>  </p>
+            <p>Git <span>/</span> GitHub <span>/</span> SVN</p>
         </div>
     </article>
 
