- implemented portfolio preview for 4 projects

--- a/public/index.html
+++ b/public/index.html
@@ -78,27 +78,82 @@
                 /<button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact</button>
             </nav>
         </header>
-        <article class="article-body portfolio-item-vendomo">
-            <h3 class="portfolio-item-title">Vendomo</h3>
-            <h4 class="portfolio-item-subtitle">Online Real Estate Selling and Renting Service</h4>
-            <figure class="portfolio-item-vendomo">
-                <img class="portfolio-item-img" src="/img/portfolio/pavel-maximov-vendomo.png">
-            </figure>
-        </article>
         <article class="article-body portfolio-item-bk">
-            <h3 class="portfolio-item-title">Vendomo</h3>
-            <h4 class="portfolio-item-subtitle">Online Real Estate Selling and Renting Service</h4>
-            <figure class="portfolio-item-bk">
-                <img class="portfolio-item-img" src="/img/portfolio/pavel-maximov-vendomo.png">
+            <figure class="portfolio-item-desktop">
+                <img class="portfolio-item-img" src="/img/portfolio/desktop.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/bk-preview-desktop.jpg">
+            </figure>
+            <figure class="portfolio-item-tablet">
+                <img class="portfolio-item-img" src="/img/portfolio/tablet.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/bk-preview-tablet.jpg">
+            </figure>
+            <figure class="portfolio-item-notebook">
+                <img class="portfolio-item-img" src="/img/portfolio/notebook.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/bk-preview-notebook.jpg">
+            </figure>
+            <figure class="portfolio-item-mobile">
+                <img class="portfolio-item-img" src="/img/portfolio/mobile.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/bk-preview-mobile.jpg">
             </figure>
         </article>
+
+        <article class="article-body portfolio-item-vendomo">
+            <figure class="portfolio-item-desktop">
+                <img class="portfolio-item-img" src="/img/portfolio/desktop.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/vendomo-preview-desktop.jpg">
+            </figure>
+            <figure class="portfolio-item-tablet">
+                <img class="portfolio-item-img" src="/img/portfolio/tablet.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/vendomo-preview-tablet.jpg">
+            </figure>
+            <figure class="portfolio-item-notebook">
+                <img class="portfolio-item-img" src="/img/portfolio/notebook.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/vendomo-preview-notebook.jpg">
+            </figure>
+            <figure class="portfolio-item-mobile">
+                <img class="portfolio-item-img" src="/img/portfolio/mobile.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/vendomo-preview-mobile.jpg">
+            </figure>
+        </article>
+
+        <article class="article-body portfolio-item-vendomo-crm">
+            <figure class="portfolio-item-desktop">
+                <img class="portfolio-item-img" src="/img/portfolio/desktop.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/vendomo-crm-preview-desktop.jpg">
+            </figure>
+            <figure class="portfolio-item-tablet">
+                <img class="portfolio-item-img" src="/img/portfolio/tablet.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/vendomo-crm-preview-tablet.jpg">
+            </figure>
+            <figure class="portfolio-item-notebook">
+                <img class="portfolio-item-img" src="/img/portfolio/notebook.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/vendomo-crm-preview-notebook.jpg">
+            </figure>
+            <figure class="portfolio-item-mobile">
+                <img class="portfolio-item-img" src="/img/portfolio/mobile.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/vendomo-crm-preview-mobile.jpg">
+            </figure>
+        </article>
+
         <article class="article-body portfolio-item-foodora">
-            <h3 class="portfolio-item-title">Vendomo</h3>
-            <h4 class="portfolio-item-subtitle">Online Real Estate Selling and Renting Service</h4>
-            <figure class="portfolio-item-foodora">
-                <img class="portfolio-item-img" src="/img/portfolio/pavel-maximov-vendomo.png">
+            <figure class="portfolio-item-desktop">
+                <img class="portfolio-item-img" src="/img/portfolio/desktop.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/foodora-preview-desktop.jpg">
+            </figure>
+            <figure class="portfolio-item-tablet">
+                <img class="portfolio-item-img" src="/img/portfolio/tablet.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/foodora-preview-tablet.jpg">
+            </figure>
+            <figure class="portfolio-item-notebook">
+                <img class="portfolio-item-img" src="/img/portfolio/notebook.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/foodora-preview-notebook.jpg">
+            </figure>
+            <figure class="portfolio-item-mobile">
+                <img class="portfolio-item-img" src="/img/portfolio/mobile.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/foodora-preview-mobile.jpg">
             </figure>
         </article>
+
     </section>
 
 
