- implemented portfolio preview for UNICRI and Others websites

--- a/public/index.html
+++ b/public/index.html
@@ -176,6 +176,52 @@
             </figure>
         </article>
 
+        <article class="article-body portfolio-item-unicri">
+            <figure class="portfolio-item-notebook-ande">
+                <img class="portfolio-item-img" src="/img/portfolio/notebook.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/ande-preview-notebook.jpg">
+            </figure>
+            <figure class="portfolio-item-notebook-eusec">
+                <img class="portfolio-item-img" src="/img/portfolio/notebook.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/eusec-preview-notebook.jpg">
+            </figure>
+            <figure class="portfolio-item-notebook-cbrn">
+                <img class="portfolio-item-img" src="/img/portfolio/notebook.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/cbrn-preview-notebook.jpg">
+            </figure>
+            <figure class="portfolio-item-notebook-ipo">
+                <img class="portfolio-item-img" src="/img/portfolio/notebook.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/ipo-preview-notebook.jpg">
+            </figure>
+            <figure class="portfolio-item-notebook-lab">
+                <img class="portfolio-item-img" src="/img/portfolio/notebook.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/lab-preview-notebook.jpg">
+            </figure>
+        </article>
+
+        <article class="article-body portfolio-item-others">
+            <figure class="portfolio-item-notebook-school">
+                <img class="portfolio-item-img" src="/img/portfolio/notebook.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/school-preview-notebook.jpg">
+            </figure>
+            <figure class="portfolio-item-notebook-davide">
+                <img class="portfolio-item-img" src="/img/portfolio/notebook.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/davide-preview-notebook.jpg">
+            </figure>
+            <figure class="portfolio-item-notebook-milena">
+                <img class="portfolio-item-img" src="/img/portfolio/notebook.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/milena-preview-notebook.jpg">
+            </figure>
+            <figure class="portfolio-item-notebook-pandora">
+                <img class="portfolio-item-img" src="/img/portfolio/notebook.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/pandora-preview-notebook.jpg">
+            </figure>
+            <figure class="portfolio-item-notebook-acqua">
+                <img class="portfolio-item-img" src="/img/portfolio/notebook.png">
+                <img class="portfolio-item-img-preview" src="/img/portfolio/acqua-preview-notebook.jpg">
+            </figure>
+        </article>
+
     </section>
 
 
